tests/paczka1/fuzzy1/79928580.err
Error in line 1: OksdSiOG1i A527 47,8
Error in line 11: OksdSiOG1i A473 1,2
Error in line 16: DcsLHv47uKb S452 53,4
Error in line 10: pyb7B S152 3,5
Error in line 19: A527 A527 52,6
Error in line 23: A527 A473 72,6
Error in line 30: xY3 S152 18,2
